# good-vibes-scaner

./: .cabal-audit.toml  .gitignore  .hlint.yaml  CHANGELOG.md  CONTRIBUTING.md  GoodVibesLib.hs  LICENSE  Main.hs  README.md  git-secret-scaner.cabal  good-vibes-scaner.cabal  working-main-backup.hs
.github/workflows/: ci.yml  release.yml
app/: Main.hs
src/GoodVibes/: Core.hs  Git.hs  Patterns.hs  Scanner.hs  Types.hs  Utils.hs
test/: Main.hs  TestSuite.hs
test/GoodVibes/: CoreSpec.hs  PatternsSpec.hs
