cabal-version: 2.4
name: git-secret-scanner
version: 1.0.0
synopsis: A tool to find secrets accidentally committed to git
description: Scans git repository history to find API keys, passwords, and other secrets
author: Your Name
maintainer: your.email@example.com
category: Security
build-type: Simple

executable git-secret-scanner
  main-is: Main.hs
  build-depends:
    base >=4.16 && <5,
    text,
    regex-tdfa,
    process,
    directory,
    filepath
  
  ghc-options: -Wall -O2
  default-language: Haskell2010
