cabal-version: 2.4
name: good-vibes-scaner
version: 1.0.0
synopsis: ðŸ” A vibed-out tool to catch secrets in your git repos with good vibes âœ¨
description: A chill yet powerful scanner that vibes through your git repository history 
             to find accidentally committed API keys, passwords, and other secrets. 
             Built with good vibes and security best practices! ðŸš€
author: svarog369
maintainer: svarog369@users.noreply.github.com
homepage: https://github.com/svarog369/good-vibes-scaner
bug-reports: https://github.com/svarog369/good-vibes-scaner/issues
category: Security, Development
build-type: Simple
license: MIT
license-file: LICENSE
extra-doc-files: README.md, CHANGELOG.md
tested-with: GHC ==9.2.8 || ==9.4.7 || ==9.6.3

source-repository head
  type: git
  location: https://github.com/svarog369/good-vibes-scaner

common shared-properties
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wmissing-home-modules
               -Wpartial-fields -Wredundant-constraints

executable good-vibes-scaner
  import: shared-properties
  main-is: working-main-backup.hs
  hs-source-dirs: .
  build-depends:
    base >=4.16 && <5,
    text >=1.2 && <3,
    regex-tdfa >=1.3 && <1.4,
    process >=1.6 && <1.7,
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.5

test-suite good-vibes-tests
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  hs-source-dirs: test, .
  other-modules: GoodVibesLib
  build-depends:
    base >=4.16 && <5,
    hspec >=2.7,
    QuickCheck >=2.14,
    text >=1.2 && <3,
    regex-tdfa >=1.3 && <1.4,
    process >=1.6 && <1.7,
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.5
